--- a/index.html
+++ b/index.html
@@ -1,167 +1,67 @@
-<!DOCTYPE html>
-<html lang="ar">
+<!doctype html>
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>جدول مباريات اليوم</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Tajawal", sans-serif;
-    }
-    body {
-      background-color: #121212;
-      color: #ffffff;
-      direction: rtl;
-      padding: 20px;
-    }
-    h1 {
-      text-align: center;
-      color: #FFD700;
-      margin-bottom: 30px;
-      font-size: 24px;
-    }
-    .matches-container {
-      width: 90%;
-      max-width: 600px;
-      margin: 0 auto;
-    }
-    .match-card {
-      background-color: #1E1E1E;
-      border-radius: 8px;
-      margin-bottom: 15px;
-      padding: 15px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      transition: background-color 0.3s;
-      cursor: pointer;
-    }
-    .match-card:hover {
-      background-color: #2A2A2A;
-    }
-    .match-info {
-      text-align: center;
-      flex: 1;
-    }
-    .teams {
-      font-size: 18px;
-      font-weight: bold;
-      margin-bottom: 5px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .team-logo {
-      width: 50px;
-      height: 50px;
-      object-fit: contain;
-      margin: 0 10px;
-    }
-    .time, .commentator, .countdown {
-      font-size: 14px;
-      color: #cccccc;
-    }
-  </style>
-</head>
-<body>
+  <title>Supertv</title>
+  <base href="/">
 
-<h1>جدول مباريات اليوم 5 مارس</h1>
+  <meta charset="utf-8">
+  <meta name="description" content="Supertv watch movies">
+  <meta name="keywords" content="Super,movies,tv shows,videos">
+  <meta name="author" content="Withinpixels">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
 
-<div class="matches-container">
-  
-  <!-- Match 1: Club Brugge vs Aston Villa -->
-  <div class="match-card" onclick="window.location.href='https://fdxddzss.github.io/FAST-TV-LIFE-11/'">
-    <div class="teams">
-      <img class="team-logo" src="https://imagecache.365scores.com/image/upload/f_png,w_24,h_24,c_limit,q_auto:eco,dpr_3,d_Competitors:default1.png/v3/Competitors/480" alt="شعار باريس ">
-      <span>باريس  ×  ليفربول</span>
-      <img class="team-logo" src="https://imagecache.365scores.com/image/upload/f_png,w_24,h_24,c_limit,q_auto:eco,dpr_3,d_Competitors:default1.png/v22/Competitors/108" alt="شعار ليفربول ">
-    </div>
-    <div class="match-info">
-      <div class="time">التوقيت: 11:00</div>
-      <div class="commentator">المعلق: حسن العيدروس </div>
-      <div class="countdown" id="match1"></div>
-    </div>
-  </div>
+  <!-- <link rel="icon" type="image/x-icon" href="/assets/images/tv-svg.svg"> -->
+  <script id="ze-snippet"
+    src="https://static.zdassets.com/ekr/snippet.js?key=ecfd7b1d-996a-49d3-b00f-8167287e0903"> </script>
+  <!-- Start new relic cide snippet -->
+  <script src="/assets/js/newrelic.js"></script>
+  <!-- End new relic cide snippet -->
 
-  <!-- Match 2: Dortmund vs Lille -->
-  <div class="match-card" onclick="window.location.href='https://fdxddzss.github.io/bein-sport-2-/'">
-    <div class="teams">
-      <img class="team-logo" src="https://imagecache.365scores.com/image/upload/f_png,w_24,h_24,c_limit,q_auto:eco,dpr_3,d_Competitors:default1.png/v1/Competitors/331" alt="شعار بايرن ميونخ">
-      <span>بايرن ميونخ× باير ليفركوزن</span>
-      <img class="team-logo" src="https://imagecache.365scores.com/image/upload/f_png,w_24,h_24,c_limit,q_auto:eco,dpr_3,d_Competitors:default1.png/v5/Competitors/333 " alt="شعار باير ليفركوزن ">
-    </div>
-    <div class="match-info">
-      <div class="time">التوقيت: 11:00</div>
-      <div class="commentator">المعلق: حفيظ دراجي</div>
-      <div class="countdown" id="match2"></div>
-    </div>
-  </div>
+  <meta name="theme-color" content="#1976d2">
+  <link rel="manifest" href="manifest.webmanifest">
+<link rel="stylesheet" href="styles.79dcfb5f510d44014d83.css"></head>
 
-  <!-- Match 3: Real Madrid vs Atletico Madrid -->
-  <div class="match-card" onclick="window.location.href='https://fdxddzss.github.io/ONEE/'">
-    <div class="teams">
-      <img class="team-logo" src="https://g.top4top.io/p_3348rxbtl0.png" alt="شعار  برشلونة">
-      <span>برشلونة  ×  بنفيكا</span>
-      <img class="team-logo" src="https://imagecache.365scores.com/image/upload/f_png,w_24,h_24,c_limit,q_auto:eco,dpr_3,d_Competitors:default1.png/v1/Competitors/888" alt="شعار بنفيكا ">
-    </div>
-    <div class="match-info">
-      <div class="time">التوقيت: 11:00</div>
-      <div class="commentator">المعلق: عصام الشوالي</div>
-      <div class="countdown" id="match3"></div>
-    </div>
-  </div>
+<app-root></app-root>
 
-  <!-- Match 4: Eindhoven vs Arsenal -->
-  <div class="match-card" onclick="window.location.href='https://fdxddzss.github.io/ONEE/'">
-    <div class="teams">
-      <img class="team-logo" src="https://imagecache.365scores.com/image/upload/f_png,w_24,h_24,c_limit,q_auto:eco,dpr_3,d_Competitors:default1.png/v2/Competitors/691" alt="شعار فاينورد">
-      <span>فاينورد × انتر ميلان</span>
-      <img class="team-logo" src="https://imagecache.365scores.com/image/upload/f_png,w_24,h_24,c_limit,q_auto:eco,dpr_3,d_Competitors:default1.png/v3/Competitors/224" alt="شعار انتر ميلان">
-    </div>
-    <div class="match-info">
-      <div class="time">التوقيت: 8:45</div>
-      <div class="commentator">المعلق: علي محمد علي</div>
-      <div class="countdown" id="match4"></div>
-    </div>
-  </div>
 
-</div>
-
+<script src="https://browser.sentry-cdn.com/5.11.1/bundle.min.js"
+  integrity="sha384-r7/ZcDRYpWjCNXLUKk3iuyyyEcDJ+o+3M5CqXP5GUGODYbolXewNHAZLYSJ3ZHcV" crossorigin="anonymous"></script>
+<!-- https://github.com/getsentry/sentry-javascript/issues/1976#issuecomment-492260648 -->
+<script src="https://browser.sentry-cdn.com/5.11.1/captureconsole.min.js"></script>
 <script>
-  function startCountdown(id, time) {
-    let matchTime = new Date();
-    let [hour, minute] = time.split(":").map(Number);
-    
-    matchTime.setHours(hour, minute, 0, 0); // حساب التوقيت لليوم الحالي
-
-    function updateCountdown() {
-      let now = new Date();
-      let timeDifference = matchTime - now;
-
-      if (timeDifference <= 0) {
-        document.getElementById(id).innerHTML = "المباراة بدأت!";
-        return;
-      }
-
-      let hours = Math.floor(timeDifference / (1000 * 60 * 60));
-      let minutes = Math.floor((timeDifference % (1000 * 60 * 60)) / (1000 * 60));
-      let seconds = Math.floor((timeDifference % (1000 * 60)) / 1000);
-
-      document.getElementById(id).innerHTML = `باقي ${hours} ساعة و ${minutes} دقيقة و ${seconds} ثانية`;
-
-      setTimeout(updateCountdown, 1000);
-    }
-
-    updateCountdown();
-  }
-
-  startCountdown("match1", "23:00");
-  startCountdown("match2", "23:00");
-  startCountdown("match3", "23:00");
-  startCountdown("match4", "20:45");
+  Sentry.init({
+    dsn: 'https://fedbd082d2424223b3417b4a0409c880@se.Supertv.gg/7',
+    debug: false,
+    integrations: [
+      new Sentry.Integrations.CaptureConsole({
+        levels: ['error', 'info']
+      })
+    ],
+  });
 </script>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+  (function (m, e, t, r, i, k, a) {
+    m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+    m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+  })
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-</body>
+  ym(58386898, "init", {
+    clickmap: true,
+    trackLinks: true,
+    accurateTrackBounce: true
+  });
+</script>
+<noscript>
+  <div><img src="https://mc.yandex.ru/watch/58386898" style="position:absolute; left:-9999px;" alt="" /></div>
+</noscript>
+<!-- /Yandex.Metrika counter -->
+
+
+
+<script src="runtime.824bae71c2284d7e93cc.js" defer></script><script src="polyfills-es5.29bef4559b78463ff735.js" nomodule defer></script><script src="polyfills.0c073e7f51a658dc5810.js" defer></script><script src="scripts.99ccb32c4edf8c5e6095.js" defer></script><script src="main.831a4d4ee5699cf74373.js" defer></script></body>
+
 </html>
