--- a/index.html
+++ b/index.html
@@ -1,202 +1,310 @@
 <!DOCTYPE html>
-<html lang="ar">
-
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>صفحة تسجيل الدخول</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+  <title>هدى القرآن</title>
+  
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
   <style>
-    /* تنسيق عام للجسم */
-    body {
+    * {
       margin: 0;
       padding: 0;
-      font-family: Arial, sans-serif;
-      background: url('https://i.postimg.cc/HWvsqpmQ/japan-background-digital') no-repeat center center fixed;
-      background-size: cover;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
+      box-sizing: border-box;
+      font-family: 'Arial', sans-serif;
     }
 
-    /* تنسيق الحاوية */
-    .container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-    }
-
-    /* تنسيق صندوق تسجيل الدخول */
-    .login-box {
-      background: rgba(255, 255, 255, 0.8); /* تأثير زجاجي شبه شفاف */
-      backdrop-filter: blur(15px); /* تأثير البلور لإعطاء مظهر زجاجي */
-      border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-      padding: 50px 30px; /* إضافة مسافة داخلية */
-      width: 30vw; /* عرض بنسبة 30% من عرض الشاشة */
-      max-width: 100vw; /* التأكد من أخذ العرض الكامل */
-      text-align: center;
-      transform: translateY(100%);
-      animation: slideUp 1.2s ease-out forwards;
-      display: none; /* افتراضيًا، الصندوق مخفي */
-    }
-
-    /* حركة الصندوق عند التحميل */
-    @keyframes slideUp {
-      from {
-        transform: translateY(100%);
-      }
-
-      to {
-        transform: translateY(0);
-      }
-    }
-
-    /* تنسيق العنوان */
-    .login-box h2 {
+    body {
+      background: linear-gradient(135deg, #004d40 0%, #00251a 100%);
       color: #fff;
-      font-size: 28px;
-      margin-bottom: 30px;
+      min-height: 100vh;
+      position: relative;
+      padding-bottom: 80px;
     }
 
-    /* تنسيق حقول الإدخال */
-    .input-box input {
-      width: 80%; /* جعل حقول الإدخال أضيق لتحقيق التوازن */
-      padding: 12px 20px;
-      border: none;
-      border-radius: 15px;
-      font-size: 14px;
-      background: rgba(255, 255, 255, 0.2);
-      color: #fff;
-      outline: none;
-      box-shadow: inset 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .input-box input::placeholder {
-      color: rgba(255, 255, 255, 0.7);
-    }
-
-    /* تنسيق الخيارات */
-    .options {
+    .top-bar {
       display: flex;
-      align-items: center;
       justify-content: space-between;
-      margin: 20px 0;
-      font-size: 14px;
+      align-items: center;
+      padding: 15px 20px;
+      background: rgba(0, 69, 64, 0.9);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
     }
 
-    .options .remember-me {
-      color: #fff;
-      margin-left: 10px;
+    .header-title {
+      text-align: center;
+      font-size: 2em;
+      padding: 20px;
+      background: rgba(0,0,0,0.2);
+      border-bottom: 2px solid #ffd700;
+      font-family: 'Amiri', serif;
     }
 
-    .options .forgot-password {
+    .button-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 25px;
+      padding: 30px 15px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .option-button {
+      position: relative;
+      padding: 25px;
+      background: rgba(0, 77, 64, 0.8);
+      color: #ffd700;
+      font-size: 1.3em;
+      text-align: center;
+      border-radius: 12px;
+      border: 2px solid #004d40;
+      transition: all 0.3s ease;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 120px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+      flex-direction: column;
+    }
+
+    .option-button:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+    }
+
+    .footer-menu {
+      display: flex;
+      justify-content: space-around;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background: rgba(0, 69, 64, 0.95);
+      padding: 15px 0;
+      border-top: 2px solid #ffd700;
+      backdrop-filter: blur(5px);
+      z-index: 1000;
+    }
+
+    .footer-menu a {
       color: #fff;
       text-decoration: none;
-      margin-right: 10px;
+      font-size: 1em;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      transition: 0.3s;
+      padding: 8px 20px;
+      border-radius: 8px;
+      min-width: 90px;
     }
 
-    /* تنسيق زر الدخول */
-    .login-btn {
-      background: rgba(255, 255, 255, 0.8);
-      color: #000;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 20px;
-      font-size: 16px;
-      cursor: pointer;
+    .footer-menu a:hover, 
+    .footer-menu a.active {
+      color: #ffd700;
+      background: rgba(255,255,255,0.1);
+    }
+
+    .footer-menu i {
+      font-size: 1.8em;
+      margin-bottom: 8px;
+    }
+
+    .search-container {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      background: rgba(0, 69, 64, 0.95);
+      padding: 15px;
+      display: none;
+      z-index: 1000;
+    }
+
+    .search-container.visible {
+      display: block;
+    }
+
+    .search-input {
       width: 100%;
-      transition: transform 0.2s, box-shadow 0.25s;
-    }
-
-    .login-btn:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
-    }
-
-    /* تنسيق نص التسجيل */
-    .login-box p {
-      margin-top: 20px;
+      padding: 12px;
+      border-radius: 25px;
+      border: 2px solid #ffd700;
+      background: rgba(255,255,255,0.1);
       color: #fff;
-      font-size: 14px;
+      font-size: 1em;
     }
 
-    .login-box p a {
-      color: #fff;
-      text-decoration: underline;
+    @media (max-width: 768px) {
+      .header-title {
+        font-size: 1.5em;
+        padding: 15px;
+      }
+
+      .button-container {
+        grid-template-columns: 1fr;
+        gap: 15px;
+        padding: 20px 10px;
+      }
+
+      .option-button {
+        font-size: 1.1em;
+        padding: 20px;
+        min-height: 100px;
+      }
+
+      .footer-menu a {
+        font-size: 0.9em;
+        padding: 8px 15px;
+        min-width: 80px;
+      }
+
+      .footer-menu i {
+        font-size: 1.5em;
+      }
     }
 
-    /* جعل الحواف ناعمة لجميع المدخلات */
-    input,
-    .login-btn {
-      border-radius: 20px;
-    }
+    @media (max-width: 480px) {
+      .top-bar {
+        padding: 10px 15px;
+      }
 
-    /* تنسيق خانة الاختيار */
-    .options input[type="checkbox"] {
-      accent-color: white;
-    }
+      .header-title {
+        font-size: 1.3em;
+        padding: 10px;
+      }
 
-    /* تنسيق الرابط العلوي */
-    .login-link {
-      color: #fff;
-      text-decoration: underline;
-      font-size: 18px;
-      cursor: pointer;
+      .option-button {
+        font-size: 1em;
+      }
+
+      .footer-menu {
+        padding: 10px 0;
+      }
+
+      .footer-menu a {
+        font-size: 0.8em;
+        padding: 8px 10px;
+        min-width: 70px;
+      }
+
+      .footer-menu i {
+        font-size: 1.3em;
+        margin-bottom: 5px;
+      }
+
+      .search-input {
+        padding: 10px;
+      }
     }
   </style>
 </head>
-
 <body>
-  <!-- رابط لتسجيل الدخول -->
-  <a class="login-link" onclick="toggleLoginForm()">تسجيل الدخول</a>
 
-  <!-- حاوية نموذج تسجيل الدخول -->
-  <div class="container">
-    <div class="login-box" id="loginForm">
-      <h2>تسجيل الدخول</h2>
-      <form>
-        <!-- حقل اسم المستخدم -->
-        <div class="input-box">
-          <input type="text" placeholder="اسم المستخدم" required>
-        </div>
+  <div class="top-bar">
+    <i class="fas fa-search" onclick="toggleSearch()"></i>
+    <i class="fas fa-bars"></i>
+  </div>
 
-        <!-- حقل كلمة المرور -->
-        <div class="input-box">
-          <input type="password" placeholder="كلمة المرور" required>
-        </div>
+  <div class="search-container" id="searchBox">
+    <input type="text" class="search-input" placeholder="ابحث هنا...">
+  </div>
 
-        <!-- الخيارات: تذكرني وكلمة المرور المنسية -->
-        <div class="options">
-          <label class="remember-me">
-            <input type="checkbox"> تذكرني
-          </label>
-          <a href="#" class="forgot-password">نسيت كلمة المرور؟</a>
-        </div>
+  <div class="header-title">هدى القرآن</div>
 
-        <!-- زر الدخول -->
-        <button type="submit" class="login-btn">تسجيل الدخول</button>
+  <div class="button-container">
+    <a href="https://fdxddzss.github.io/Fffie/" class="option-button">
+      <i class="fas fa-headphones"></i>
+      <span>الاستماع إلى القرآن</span>
+    </a>
+    <a href="https://fdxddzss.github.io/Quran-/" class="option-button">
+      <i class="fas fa-book"></i>
+      <span>قراءة القرآن</span>
+    </a>
+    <a href="https://www.example.com/prayer-times" class="option-button">
+      <i class="fas fa-mosque"></i>
+      <span>أوقات الصلاة</span>
+    </a>
+    <a href="https://www.example.com/tafsir" class="option-button">
+      <i class="fas fa-book-open"></i>
+      <span>التفسير</span>
+    </a>
+  </div>
 
-        <!-- نص التسجيل -->
-        <p>ليس لديك حساب؟ <a href="#">سجل الآن</a></p>
-      </form>
-    </div>
+  <div class="footer-menu">
+    <a href="https://www.example.com/home" class="active">
+      <i class="fas fa-home"></i>
+      <span>الرئيسية</span>
+    </a>
+    <a href="https://www.example.com/live">
+      <i class="fas fa-broadcast-tower"></i>
+      <span>البث المباشر</span>
+    </a>
+    <a href="https://www.example.com/history">
+      <i class="fas fa-history"></i>
+      <span>السيرة النبوية</span>
+    </a>
+    <a href="https://www.example.com/adhkar">
+      <i class="fas fa-star-and-crescent"></i>
+      <span>الأذكار</span>
+    </a>
+    <a href="https://www.example.com/community">
+      <i class="fas fa-user-friends"></i>
+      <span>المجتمع</span>
+    </a>
   </div>
 
   <script>
-    // وظيفة لعرض / إخفاء نموذج تسجيل الدخول
-    function toggleLoginForm() {
-      const loginForm = document.getElementById('loginForm');
-      if (loginForm.style.display === 'none' || loginForm.style.display === '') {
-        loginForm.style.display = 'block';
-      } else {
-        loginForm.style.display = 'none';
-      }
+    function toggleSearch() {
+      const searchBox = document.getElementById('searchBox');
+      searchBox.classList.toggle('visible');
     }
-  </script>
-</body>
 
+    document.addEventListener('click', (e) => {
+      const searchBox = document.getElementById('searchBox');
+      if (!e.target.closest('.fa-search') && !e.target.closest('.search-container')) {
+        searchBox.classList.remove('visible');
+      }
+    });
+
+    document.querySelector('.search-container').addEventListener('click', (e) => {
+      e.stopPropagation();
+    });
+
+    // إضافة حماية لمنع أدوات المطورين
+    (function() {
+      function redirectToTelegram() {
+        window.location.href = "https://t.me/HudaApps";
+      }
+
+      // منع أدوات المطورين باستخدام F12 و Ctrl+Shift+I
+      document.addEventListener("keydown", function(event) {
+        if (
+          event.key === "F12" || 
+          (event.ctrlKey && event.shiftKey && event.key === "I") || 
+          (event.ctrlKey && event.key === "U")
+        ) {
+          event.preventDefault();
+          redirectToTelegram();
+        }
+      });
+
+      // منع النقر بزر الفأرة الأيمن
+      document.addEventListener("contextmenu", function(event) {
+        event.preventDefault();
+        redirectToTelegram();
+      });
+
+      // الكشف عن فتح أدوات المطورين
+      setInterval(function() {
+        if (window.outerHeight - window.innerHeight > 200 || window.outerWidth - window.innerWidth > 200) {
+          redirectToTelegram();
+        }
+      }, 1000);
+    })();
+  </script>
+
+</body>
 </html>
